# G4Tutorial

./: .gitignore  CMakeLists.txt  G4example02.cc  run.mac  vis.mac
include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
